--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Righteous&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assest/imgs/movie2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="assest/css/all.min.css">
-    <link rel="stylesheet" href="assest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assest/css/style.css">
+    <link rel="shortcut icon" href="assets/imgs/movie2.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script>
         let currentUser = JSON.parse(localStorage.getItem("currentUser"));
         if (!currentUser || !currentUser.logged) {
@@ -61,7 +61,7 @@
             <div class="row g-3"></div>
         </div>
     </div>
-    <script src="assest/js/bootstrap.bundle.min.js"></script>
-    <script src="assest/js/index.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
