--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Righteous&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="shortcut icon" href="assest/imgs/login2.png" type="image/x-icon">
-    <link rel="stylesheet" href="assest/css/all.min.css">
-    <link rel="stylesheet" href="assest/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assest/css/style.css">
+    <link rel="shortcut icon" href="assets/imgs/login2.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="login-body">
     <div class="container h-100 d-flex justify-content-center align-items-center">
@@ -38,7 +38,7 @@
             <p class="text-white text-center">Don’t have an account? <a class="text-decoration-none" href="signup.html">Sign Up</a></p>
         </form>
     </div>
-    <script src="assest/js/bootstrap.bundle.min.js"></script>
-    <script src="assest/js/login.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/login.js"></script>
 </body>
 </html>
